--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,12 +9,13 @@
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"
+    = stylesheet_link_tag 'http://yui.yahooapis.com/3.16.0/build/cssreset/cssreset-min.css', :media => 'all'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Droid+Sans:400,700'
     = stylesheet_link_tag "application", :media => "all"
     = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
     = javascript_include_tag "application"
 
 
   %body
-    Katie and Evan are getting hitched!
     = yield
     
