--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,10 @@
-.center.box.yellow
+/ .center.box.yellow
+/   Katie and Evan are getting hitched!
+
+.section#one
   Katie and Evan are getting hitched!
+
+.section#two
+
+.secion#three
+  More info here
