--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,10 +1,10 @@
-/ .center.box.yellow
-/   Katie and Evan are getting hitched!
-
+#header
+  %ul
+    %li
+      VENUE
+    %li
+      LODGING
+    %li
+      ACTIVITIES
+      
 .section#one
-  Katie and Evan are getting hitched!
-
-.section#two
-
-.secion#three
-  More info here
