--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,27 +1,71 @@
 html {
-//  background: image-url('grimace.jpg') no-repeat;
-//  background-size: 1400px;
-//  background-attachment: fixed;
   font-family: 'Droid Sans', sans-serif;
   font-size: 29px;
   color: rgb(51, 76, 73);
 }
 
-.section {
-  height: 800px;
+a {
+  text-decoration: none;
 }
-
-#one {
-  height: 800px;
+a:link, a:visited {
+  color: rgb(51, 76, 73);
 }
-
-
-#two {
-  height: 400px;
-  
+a:hover {
+  text-decoration: underline;
 }
-
-#three {
-  height: 800px;
-  background-image: image-url('yellow.jpg');  
+#header {
+  padding: 30px;
+  background-color: rgba(242, 242, 242, 0.85098);
+}
+#header li {
+  display: inline;
+  margin: 0 50px;
+}
+#header ul {
+  margin: auto;
+  text-align: center;
+}
+.clear {
+  clear: both;
+}
+h3 {
+  color: rgb(255, 139, 56);
+  font-size: 32px;
+}
+h4 {
+  font-size: 24px;
+  color: rgb(255, 139, 56);
+}
+#date {
+  position: absolute;
+  color: white;
+  font-size: 84px;
+  top: 450px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-family: 'Open Sans', 'Droid Sans', sans-serif;
+}
+.white_section {
+  padding: 50px 100px;
+  font-size: 24px;  
+}
+.left_side {
+  width: 70%;
+}
+p {
+  padding-top: 25px;
+}
+.blurb {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.sidebar {
+  float: right;
+  width: 20%;
+}
+#closing_image {
+  font-size: 0;
 }
