--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -12,7 +12,7 @@
 = image_tag('dsc02939.jpg', width: '100%')
     
 #date
-  8/15/15
+  08/15/15
 
 %a{name: 'venue'}
 #venue
@@ -37,7 +37,7 @@
       %p
         The wedding and reception will both be outdoors. Please wear suitable shoes! We expect it to be sunny and warm, but please be prepared for any eventuality. Including an asteroid hitting the Earth - it could happen!
       
-    
+    .clear
 = image_tag('clarkes.jpg', width: '100%')
 
 %a{name: 'lodging'}
@@ -67,6 +67,7 @@
         popular. All these other people have the nerve to be staying in the same place as our friends and family! This means that it would be best to book housing as soon as possible.
       %p
         Most homes for rent require a 4 night minimum during the summer. We think you'll find plenty of things to occupy yourself for that time in Hood River, but we understand blah blah.
+    .clear
 = image_tag('dubrovnik.jpg', width: '100%')
 %a{name: 'activities'}  
 #activities
@@ -89,7 +90,7 @@
         Activities
       %p
         There's so much to do! Fruit loops! Lucky charms!
-
+    .clear
 #closing_image      
   = image_tag('bend.jpg', width: '100%')
 %a{name: 'rsvp'}
