--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -19,7 +19,7 @@ a:hover {
   position: fixed;
   width: 100%;
   top: 0;
-  font-size: 1.8em;
+  font-size: 32px;
 }
 #header li {
   display: inline;
@@ -34,10 +34,10 @@ a:hover {
 }
 h3 {
   color: rgb(255, 139, 56);
-  font-size: 1.5em;
+  font-size: 32px;
 }
 h4 {
-  font-size: 1.1em;
+  font-size: 24px;
   color: rgb(255, 139, 56);
 }
 #date {
@@ -55,7 +55,7 @@ h4 {
 .white_section {
   padding: 85px 100px 50px 100px;
 //  font-size: 24px;
-  font-size: 1.2em;
+  font-size: 24px;
 }
 .left_side {
   width: 70%;
@@ -64,7 +64,7 @@ p {
   padding-top: 25px;
 }
 .blurb {
-  font-size: 0.9em;
+  font-size: 18px;
   margin-bottom: 20px;
 }
 .sidebar {
