--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,11 +8,12 @@
       = link_to 'ACTIVITIES', '#activities'
     %li
       = link_to 'RSVP', '#rsvp'
-      
-= image_tag('dsc02939.jpg', width: '100%')
+
+#first_photo     
+  = image_tag('dsc02939.jpg', width: '100%')
     
-#date
-  08/15/15
+  #date
+    08/15/15
 
 %a{name: 'venue'}
 #venue
