--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -92,7 +92,28 @@
       %p
         There's so much to do! Fruit loops! Lucky charms!
     .clear
+
+= image_tag('dsc00066.jpg', width: '100%')  
+
+%a{name: 'rsvp'} 
+#rsvp
+  = form_for(@rsvp, remote: true) do |f|
+    .field
+      = f.text_field :name, placeholder: 'Your name'
+    .field
+      = f.text_field :guests, placeholder: 'Any guests?'
+    .field#attending
+      %label
+        %span.label
+          Attending
+        = f.check_box :attending, class: 'ios-switch' 
+        %span.switch
+      
+    .field
+      = f.text_area :message, placeholder: 'Any message for us?'
+    
+    = f.submit 'RSVP'
 #closing_image      
   = image_tag('bend.jpg', width: '100%')
-%a{name: 'rsvp'}
-#rsvp
+
+      
