switch to mustache pic

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -93,7 +93,7 @@
         There's so much to do! Fruit loops! Lucky charms!
     .clear
 
-= image_tag('dsc00066.jpg', width: '100%')  
+= image_tag('mustache.jpg', width: '100%')  
 
 %a{name: 'rsvp'} 
 #rsvp
