--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,8 +1,10 @@
 $orange: rgb(255, 139, 56);
+$header_height: 75px;
+$grayish: rgb(51,76,73);
 
 html {
   font-family: 'Roboto', sans-serif;
-  color: rgb(51, 76, 73);
+  color: $grayish;
 }
 #content {
   min-width: 1000px;
@@ -17,13 +19,14 @@ a:hover {
   text-decoration: underline;
 }
 #header {
-  padding: 22px;
+  height: $header_height;
   background-color: rgba(242, 242, 242, 0.8598);
   position: fixed;
   width: 100%;
   top: 0;
   font-size: 32px;
   z-index: 2;
+  line-height: 75px;
 }
 #header li {
   display: inline;
@@ -62,9 +65,13 @@ h4 {
   font-family: 'Droid Sans', sans-serif;
 }
 .white_section {
-  padding: 85px 100px 50px 100px;
+  padding: $header_height 100px 50px 100px;
 //  font-size: 24px;
   font-size: 24px;
+}
+#rsvp {
+//  width: 502px;
+//  padding-top: $header_height 100px 50px 100px;
 }
 .left_side {
   width: 70%;
@@ -83,18 +90,13 @@ p {
 #closing_image {
   font-size: 0;
 }
-#rsvp {
-//  margin-top: 100px;
-  width: 502px;
-  margin: 100px auto;
-  text-align: center;
-}
+
 .field {
 //  text-align: left;
 }
 input[type="text"] {
   border-radius: 6px;
-  border: 1px solid $orange;
+  border: 2px solid rgb(127, 127, 127);
   height: 35px;
   width: 500px;
   margin: 10px auto;
@@ -104,8 +106,7 @@ input[type="text"] {
 
 textarea {
   border-radius: 6px;
-  border-color: $orange;
-  border-width: 1px;
+  border: 2px solid rgb(127, 127, 127);
   height: 100px;
   width: 500px;
   margin: 10px auto;
@@ -190,13 +191,12 @@ span.label {
   color: rgb(153, 153, 153);
   font-size: 26px;
 }
-#attending {
-//  width: 300px;
-text-align: left;
-  margin: auto;
-  border: 1px solid black; 
-}
 #rsvp_response {
   text-align: center;
-  margin: 50px auto;
+  margin: 50
+  
+  px auto;
+}
+.cushion {
+//  height: 75px;
 }
