--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -15,7 +15,6 @@
   #date
     08/15/15
 
-%a{name: 'venue'}
 #venue
   .white_section
     .sidebar
@@ -41,7 +40,7 @@
     .clear
 = image_tag('clarkes.jpg', width: '100%')
 
-%a{name: 'lodging'}
+
 #lodging
   .white_section
     .sidebar
@@ -70,7 +69,6 @@
         Most homes for rent require a 4 night minimum during the summer. We think you'll find plenty of things to occupy yourself for that time in Hood River, but we understand blah blah.
     .clear
 = image_tag('dubrovnik.jpg', width: '100%')
-%a{name: 'activities'}  
 #activities
   .white_section
     .sidebar
@@ -87,7 +85,7 @@
         %br
         River rafting
     .left_side
-      %h4
+      %h3
         Activities
       %p
         There's so much to do! Fruit loops! Lucky charms!
@@ -95,24 +93,26 @@
 
 = image_tag('mustache.jpg', width: '100%')  
 
-%a{name: 'rsvp'} 
 #rsvp
-  = form_for(@rsvp, remote: true) do |f|
-    .field
-      = f.text_field :name, placeholder: 'Your name'
-    .field
-      = f.text_field :guests, placeholder: 'Any guests?'
-    .field#attending
-      %label
-        %span.label
-          Attending
-        = f.check_box :attending, class: 'ios-switch' 
-        %span.switch
-      
-    .field
-      = f.text_area :message, placeholder: 'Any message for us?'
+  .white_section
+    %h3
+      RSVP
+    = form_for(@rsvp, remote: true) do |f|
+      .field
+        = f.text_field :name, placeholder: 'Your name'
+      .field
+        = f.text_field :guests, placeholder: 'Any guests?'
+      .field#attending
+        %label
+          %span.label
+            Attending
+          = f.check_box :attending, class: 'ios-switch' 
+          %span.switch
     
-    = f.submit 'RSVP'
+      .field
+        = f.text_area :message, placeholder: 'Any message for us?'
+  
+      = f.submit 'RSVP'
 #closing_image      
   = image_tag('bend.jpg', width: '100%')
 
