--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -114,6 +114,22 @@ textarea {
   font-size: 26px;
 }
 
+input[type=submit] {
+  border-radius: 6px;
+  border: 2px solid rgb(127, 127, 127);
+  padding: 5px 30px;
+  background-color: white;
+  color: rgb(153, 153, 153);
+}
+
+input[type=submit]:active {
+  background-color: $orange;
+  color: white;
+};
+
+span.label {
+  line-height: 40px;
+}
 
 :root input[type="checkbox"] { /* :root here acting as a filter for older browsers */
   position: absolute;
@@ -190,13 +206,4 @@ textarea {
 span.label {
   color: rgb(153, 153, 153);
   font-size: 26px;
-}
-#rsvp_response {
-  text-align: center;
-  margin: 50
-  
-  px auto;
-}
-.cushion {
-//  height: 75px;
 }
