--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -97,22 +97,23 @@
   .white_section
     %h3
       RSVP
-    = form_for(@rsvp, remote: true) do |f|
-      .field
-        = f.text_field :name, placeholder: 'Your name'
-      .field
-        = f.text_field :guests, placeholder: 'Any guests?'
-      .field#attending
-        %label
-          %span.label
-            Attending
-          = f.check_box :attending, class: 'ios-switch' 
-          %span.switch
+    #rsvp_form
+      = form_for(@rsvp, remote: true) do |f|
+        .field
+          = f.text_field :name, placeholder: 'Your name'
+        .field
+          = f.text_field :guests, placeholder: 'Any guests?'
+        .field#attending
+          %label
+            %span.label
+              Attending
+            = f.check_box :attending, class: 'ios-switch' 
+            %span.switch
     
-      .field
-        = f.text_area :message, placeholder: 'Any message for us?'
+        .field
+          = f.text_area :message, placeholder: 'Any message for us?'
   
-      = f.submit 'RSVP'
+        = f.submit 'RSVP'
 #closing_image      
   = image_tag('bend.jpg', width: '100%')
 
