add pricing, more hotels, some b&bs

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -212,3 +212,8 @@ span.label {
   float: left;
   margin-right: 17px;
 }
+.subnote {
+  margin-left: 5px;
+  font-style: italic;
+  font-size: 14px;
+}
