--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -50,24 +50,42 @@
         Hotels
       .blurb
         = link_to('Hood River Hotel', 'http://www.hoodriverhotel.com/', target: '_blank')
-        %br
+        .subnote
+          Rooms start at $200.
         = link_to('Vagabond Lodge', 'http://www.vagabondlodge.com/', target: '_blank')
         %br
         = link_to('Columbia Gorge Hotel', 'http://www.columbiagorgehotel.com/', target: '_blank')
-        %br 
+        .subnote
+          Rooms start at $269.
         = link_to('Comfort Suites', 'http://www.comfortsuites.com/hotel-hood_river-oregon-OR066', target: '_blank')
+        .subnote
+          Rooms start at $209. 
+        = link_to('Hood River Inn', 'http://www.hoodriverinn.com/', target: '_blank')
+        .subnote
+          Rooms start at $?140?. 
+          %br
+          No reservations until 60 days prior. 
+        = link_to('Hood River Suites', 'http://www.hoodriversuites.com/', target: '_blank')
+        .subnote
+          Rooms start at $152.
+      %h4
+        Bed & Breakfasts
+      .blurb
+        = link_to('Hood River BnB', 'http://www.hoodriverbnb.com/', target: '_blank')
+        %br
+        = link_to('Oak Street Hotel', 'http://www.oakstreethotel.com/', target: '_blank')
       %h4
         Homes
       .blurb
-        = link_to('Spreadsheet', 'https://docs.google.com/spreadsheets/d/1twnG8jPVD6hZ6t2-D8_U3ryPT-EFOf0NLeEu337-mgQ/edit#gid=0', target: '_blank')
+        = link_to('Spreadsheet of homes ', 'https://docs.google.com/spreadsheets/d/1twnG8jPVD6hZ6t2-D8_U3ryPT-EFOf0NLeEu337-mgQ/edit#gid=0', target: '_blank')
         %br
-        = link_to('hrvacations.com', 'http://www.hrvacations.com/', target: '_blank')
+        = link_to('Hood River Vacations', 'http://www.hrvacations.com/', target: '_blank')
         %br
-        = link_to('vrbo.com', 'http://www.vrbo.com/vacation-rentals/usa/oregon/mt-hood-the-gorge/hood-river', target: '_blank')
+        = link_to('VRBO', 'http://www.vrbo.com/vacation-rentals/usa/oregon/mt-hood-the-gorge/hood-river', target: '_blank')
         %br
-        = link_to('homeaway.com', 'http://www.homeaway.com/vacation-rentals/oregon/hood-river/r8186', target: '_blank')
+        = link_to('HomeAway', 'http://www.homeaway.com/vacation-rentals/oregon/hood-river/r8186', target: '_blank')
         %br
-        = link_to('vacasa.com', 'https://www.vacasa.com/usa/Oregon/Hood-River/?submit=Search&wz=2&search=Hood+River%2C+OR&neighbor=1&arrival=&departure=&nights=&flexStart=&flexEnd=&adults=1&children=0&pets=0&minrate=0&maxrate=100000&minbeds=0&maxbeds=100&minbaths=1&maxbaths=100&display=tile&gridS=01%2F31%2F2015&RegionID=3&CityID=28', target: '_blank')
+        = link_to('Vacasa', 'https://www.vacasa.com/usa/Oregon/Hood-River/?submit=Search&wz=2&search=Hood+River%2C+OR&neighbor=1&arrival=&departure=&nights=&flexStart=&flexEnd=&adults=1&children=0&pets=0&minrate=0&maxrate=100000&minbeds=0&maxbeds=100&minbaths=1&maxbaths=100&display=tile&gridS=01%2F31%2F2015&RegionID=3&CityID=28', target: '_blank')
     .left_side
       %h3
         Lodging
