add a question mark

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -62,7 +62,7 @@
           Rooms start at $209. 
         = link_to('Hood River Inn', 'http://www.hoodriverinn.com/', target: '_blank')
         .subnote
-          Rooms start at $?140?. 
+          Rooms start at $140? 
           %br
           No reservations until 60 days prior. 
         = link_to('Hood River Suites', 'http://www.hoodriversuites.com/', target: '_blank')
