replace home rental urls with actual names.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -94,7 +94,7 @@
         %i very
         popular! This means that it would be best to book housing as soon as possible.
       %p
-        Most homes for rent require a four (or more) night minimum during the summer. If you can stay that long, we think you'll find plenty to do! On the right, we have a spreadsheet that has quick summaries of many of the houses near downtown Hood River. You can find more houses online, with the most popular sites listed. Note that there is significant overlap between some of the sites - #{link_to 'hrvacations.com', 'http://www.hrvacations.com/'} lists many of its properties on #{link_to('homeaway.com', 'http://www.homeaway.com/')} and #{link_to 'vrbo.com', 'http://www.vrbo.com/'}.
+        Most homes for rent require a four (or more) night minimum during the summer. If you can stay that long, we think you'll find plenty to do! On the right, we have a spreadsheet that has quick summaries of many of the houses near downtown Hood River. You can find more houses online, with the most popular sites listed. Note that there is significant overlap between some of the sites - #{link_to 'Hood River Vacations', 'http://www.hrvacations.com/'} lists many of its properties on #{link_to('HomeAway', 'http://www.homeaway.com/')} and #{link_to 'VRBO', 'http://www.vrbo.com/'}.
 
     .clear
 = image_tag('christmas.jpg', width: '100%')
