--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -79,6 +79,7 @@ h4 {
 }
 p {
   padding-top: 25px;
+  line-height: 130%;
 }
 .blurb {
   font-size: 18px;
@@ -216,4 +217,16 @@ span.label {
   margin-left: 5px;
   font-style: italic;
   font-size: 14px;
+}
+.window {
+  opacity: 0;
+  width: 100%;
+  height: 200px;
+}
+section {
+  background: no-repeat fixed center center;
+  background-size: 100%;
+}
+#first {
+  background-image: url('http://a.espncdn.com/photo/2015/0211/barkley_leeds_01_1600x1638.jpg');
 }
