force the reset css to happen first. stop putting a div inside a p, and make the line-height successfully apply to that paragraph

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -141,8 +141,7 @@
       %p
         There are an amazing variety of activities to do in Hood River. 
       %p
-        .left_picture
-          = image_tag('railroad.jpg', width: '290px')
+        = image_tag('railroad.jpg', width: '290px', class: 'left_picture')
         Downtown Hood River has a number of great restaurants, shops, wineries, and breweries. If you venture a bit further out of town, you can find plenty more fun things to do - world-class wind surfing and kite boarding, mountain biking, hiking, and a beautiful drive through the fruit orchards, to name just a few. Find more info using the links on the right.  
     .clear
 
