--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -214,9 +214,9 @@ span.label {
   margin-right: 17px;
 }
 .subnote {
-  margin-left: 5px;
   font-style: italic;
   font-size: 14px;
+  margin-bottom: 8px;
 }
 .window {
   opacity: 0;
@@ -229,4 +229,7 @@ section {
 }
 #first {
   background-image: url('http://a.espncdn.com/photo/2015/0211/barkley_leeds_01_1600x1638.jpg');
+}
+.sidebar_links li {
+  margin-bottom: 2px;
 }
