--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -233,3 +233,7 @@ section {
 .sidebar_links li {
   margin-bottom: 2px;
 }
+span.important {
+  font-weight: bold;
+  text-decoration: underline;
+}
