--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -102,7 +102,9 @@
       %p
         Hood River during the summer is 
         %i very
-        popular! This means that it would be best to book housing as soon as possible.
+        popular! This means that it would be best to book housing 
+        %span.important
+          as soon as possible.
       %p
         Most homes for rent require a four (or more) night minimum during the summer. If you can stay that long, we think you'll find plenty to do! On the right, we have a spreadsheet that has quick summaries of many of the houses near downtown Hood River. You can find more houses online, with the most popular sites listed. Note that there is significant overlap between some of the sites - #{link_to 'Hood River Vacations', 'http://www.hrvacations.com/'} lists many of its properties on #{link_to('HomeAway', 'http://www.homeaway.com/')} and #{link_to 'VRBO', 'http://www.vrbo.com/'}.
 
@@ -170,11 +172,24 @@
     %h3 
       How We Met
     %p
-      We met at Starbucks, much to Katie's chagrin.
+      They met at Starbucks, much to Katie's chagrin.
     %p
-      Stay tuned for the rest of the story...
+      It's the classic "we met at a wedding" story, but really, they should have met sooner. They had been at a few of the same events without ever meeting - for example, a dragon boat racing festival in Vancouver B.C. They finally met at Brent (Evan's childhood friend and Katie's cousin) and Julia's wedding in Monterey in 2012.
+    %p
+      The wedding was on a Friday, and they both needed to work in the morning. Separately, they headed to the Starbucks near the hotel for the free wifi. As he passed by her table, Katie recognized Evan from the party the night before and he sat down next to her. They hit it off, and needless to say, not much work was done that morning.
+    
+    %p
+      At the reception that night, Brent's dad was playing matchmaker. "Evan, she is so smart." "Katie, there's only one guy in here for you." And so on. By the end of the night, Katie was inviting Evan into the hot tub with her for a late night soak. He said no. Prude! 
       
+    %p
+      However, Evan was working the long play. He bought a plane ticket up to Portland two weeks later to see her. After a great weekend together, they were smitten. Flash forward a year of long distance dating. Katie moved down to San Francisco, and the couple moved in to a cute apartment in Noe Valley.
+    
+    %p
+      = image_tag('proposal.jpg', width: '290px', class: 'left_picture')
+      In October 2014, Evan popped the question. It was a very creative proposal. Evan channeled Katie's family's craftiness and gave Katie a series of four handmade gifts over the course of six weeks. After he gave her the last one, he asked if she had solved the puzzle. "What puzzle?" It turned out, each gift represented a word in that age-old question. After a hint or two, Katie put all the pieces together, and Evan voiced the words: "Wheel ewe Mary me?"
       
+    %br  
+    
 = image_tag('starbucks.jpg', width: '100%')
 
 #rsvp
